--- a/comments/templates/comments/delete_comment_modal.html
+++ b/comments/templates/comments/delete_comment_modal.html
@@ -13,7 +13,7 @@
             method="POST">
         {% csrf_token %}
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">
+          <h5 class="modal-title">
             {% if reply %}
               Confirm reply deletion
             {% else %}
