--- a/my_newsapp/templates/my_newsapp/edit_article.html
+++ b/my_newsapp/templates/my_newsapp/edit_article.html
@@ -8,11 +8,21 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-6 current-images">
-        <p>Current Images</p>
+        <p class="font-weight-bold">Current Images</p>
         {% if article.images.all %}
           <ul>
             {% for image in article.images.all  %}
-              <li class="mb-2">{{ image }}<button class="ml-4">Delete</button></li>
+              <li id="image-{{ image.id }}" class="mb-2">{{ image }}
+                <!-- eksplicitno naveden atribut type="button" je veoma bitan ovdje:
+                        The reason this is: In HTML5,any button without a type defaults to a "submit" type.
+                        Zbog toga, ako ne navedemo type="button", klikom na button automatsko se submitt-a
+                        kompletna Article forma, kao da smo kliknuli na Update button !!!! -->
+                <button type="button" class="btn btn-light btn-m ml-4" id="image-delete-button-{{ image.id }}" data-toggle="modal" data-target="#ImageDeleteModal-{{ image.id }}">
+                    Delete
+                </button>
+                <!-- Modal (image_delete_modal.html) is included at the bottom, because in parent template (create_article), 
+                  this block is inside main Article form, so we would have nested forms if modal is included here.   -->
+              </li>
             {% endfor %}
           </ul>
         {% else %}
@@ -20,11 +30,17 @@
         {% endif %}    
       </div>
       <div class="col-md-6 current-files">
-        <p>Current Files</p>
+        <p class="font-weight-bold">Current Files</p>
         {% if article.files.all %}
           <ul>
             {% for file in article.files.all  %}
-              <li class="mb-2">{{ file }}<button class="ml-4">Delete</button></li>
+              <li id="file-{{ file.id }}" class="mb-2">{{ file }}
+                <button type="button" class="btn btn-light btn-m ml-4" id="file-delete-button-{{ file.id }}" data-toggle="modal" data-target="#FileDeleteModal-{{ file.id }}">
+                    Delete
+                </button>
+                <!-- Modal (image_delete_modal.html) is included at the bottom, because in parent template (create_article), 
+                  this block is inside main Article form, so we would have nested forms if modal is included here.   -->
+              </li>
             {% endfor %}
           </ul>
         {% else %}
@@ -35,20 +51,33 @@
   </div>
 {% endblock current_files %}
 
+
+
 {% block submit_button %}
   <hr style="margin-top: 2rem; border-top: 1px solid rgba(0, 0, 0, 0.2)">
   <input type="submit" name="submit" value="Update" class="btn btn-primary btn-lg mt-2" id="submit-id-submit">
 {% endblock submit_button %}
 
+<!-- modals are included here, because in parent template (create_article.html), this block comes after ArticleForm and 
+Image and File formsets, so modal forms are not nested inside main article form. If we put them   -->
+{% block modals %}
+  {% if article.images.all %}
+    {% for image in article.images.all %}
+      {% include 'my_newsapp/snippets/image_delete_modal.html' %}
+    {% endfor %}
+  {% endif %}
+  {% if article.files.all %}
+    {% for file in article.files.all %}
+      {% include 'my_newsapp/snippets/file_delete_modal.html' %}
+    {% endfor %}
+  {% endif %}
+{% endblock modals %}
+
+
+
 {% block script %}
   {{ block.super }}
-  <script>
-    // scrolls to top of the form when page is accessed from article-detail-pages, maintains scroll in case
-    // of invalid forms. 
-    if ( !(document.referrer.includes('edit-article/')) ) {
-          window.scrollTo(0, 250);
-      }
-</script>
+  <script type="module" src="{% static 'my_newsapp/edit_article.js' %}"></script>
 {% endblock script %}
 
 
