filename cutting overflow works

--- a/my_newsapp/templates/my_newsapp/edit_article.html
+++ b/my_newsapp/templates/my_newsapp/edit_article.html
@@ -6,7 +6,7 @@
 
 {% block current_files  %}
 
-  <canvas id="canvas" style="font-size: 20px; display: none;"></canvas>
+  <canvas id="canvas" style="display: none;"></canvas>
 
   <div class="container mt-5"> <!-- main container start -->
     <div class="row"> <!-- main row start -->
