--- a/my_newsapp/templates/my_newsapp/edit_article.html
+++ b/my_newsapp/templates/my_newsapp/edit_article.html
@@ -9,7 +9,7 @@
   <canvas id="canvas" style="display: none;"></canvas>
 
   <div class="container mt-5"> <!-- main container start -->
-    <div class="row"> <!-- main row start -->
+    <div class="row current-files-and-images"> <!-- main row start -->
       
       <!-- Images div -->
       <div class="col-md-6 current-images"> <!-- images main col start -->
