prevent article update if no images implemented

--- a/comments/templates/comments/comments_snippet.html
+++ b/comments/templates/comments/comments_snippet.html
@@ -1,5 +1,5 @@
 <div class="comment" id="{{ comment.id }}">
-  <p class="margin-bottom-0"><strong>{{ comment.author }} {{ comment.id }}</strong></p>
+  <p class="margin-bottom-0"><strong>{{ comment.author }}</strong></p>
   <p class="pub-date margin-bottom-5">{{ comment.pub_date }}</p>
   <p class="text margin-bottom-0">{{ comment.text }}</p>
 
