--- a/my_newsapp/templates/my_newsapp/snippets/article_delete_modal.html
+++ b/my_newsapp/templates/my_newsapp/snippets/article_delete_modal.html
@@ -1,25 +1,16 @@
-<div class="modal fade" 
-     {% block modal_id %} 
-     {% endblock modal_id %}
-     tabindex="-1" role="dialog" aria-labelledby="DeleteModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="ArticleDeleteModal" tabindex="-1" role="dialog" aria-labelledby="DeleteModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
-      <form {% block delete_form__id_class_and_action %}
-            {% endblock delete_form__id_class_and_action %}
-            method="POST">
+      <form id="article-delete-form" action="{% url 'my_newsapp:delete-article' id=article.id %}" method="POST">
         {% csrf_token %}
         <div class="modal-header">
-          <h5 class="modal-title">
-            {% block modal_title %}
-            {% endblock modal_title %}             
-          </h5>
+          <h5 class="modal-title">Confirm article deletion</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          {% block modal_body %}
-          {% endblock modal_body %} 
+            <p>Are you sure you want to delete {{ article.title }}</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
