commentsCount accesed through function, script with global variable removed from base.html

--- a/comments/static/comments/css/comments.css
+++ b/comments/static/comments/css/comments.css
@@ -1,5 +1,9 @@
 /* koristiti sass da mogu neste-ati sve selektore unutar .comments-body selektora, a ne ovako*/
 
+#comments-count {
+	display: none;
+}
+
 .comments-body {
 	margin-bottom: 100px;
 }
