--- a/comments/templates/comments/base.html
+++ b/comments/templates/comments/base.html
@@ -5,7 +5,7 @@
 
 <!-- owner object's total comments number at the moment of page loading.
   used in .js files for managing visible comments and updateing comments-counter element-->
-<script>var commentsCount = Number("{{ comments.count }}")</script>
+<span id="comments-count">{{ comments.count }}</span>
 
 <div id="error-log"></div>
 
