--- a/my_newsapp/templates/my_newsapp/snippets/navigation.html
+++ b/my_newsapp/templates/my_newsapp/snippets/navigation.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'my_newsapp:latest-articles' %}">Latest Articles</a>
+          <a class="nav-link" href="{% url 'my_newsapp:latest-articles' %}?page=1">Latest Articles</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
