--- a/my_newsapp/templates/my_newsapp/detail.html
+++ b/my_newsapp/templates/my_newsapp/detail.html
@@ -51,57 +51,11 @@
       <p class="detail-pub-date pb-2">{{article.pub_date.date}}</p>
       
       {% if article.images.count < 2 %} {% comment %} Show just that one image {% endcomment %}
-      <div style="height: 350px">
-        <img class="image-fit" src="{{ article.images.first.image.url }}"> 
-      </div>
-      {% else %} {% comment %} Show carousel of images {% endcomment %}
-        <div class="cointainer"> <!-- carousel container start -->
-          <div id="gallery" class="carousel slide" data-ride="carousel"> <!-- carousel gallery start -->
-            {% comment %} carousel indicators of images ->  - - - - {% endcomment %}
-            <ol class="carousel-indicators">
-              {% for i in article.images.all  %}
-                {% if forloop.counter0 == 0 %}
-                  <li data-target="#gallery" data-slide-to="0" class="active"></li>            
-                {% else %}
-                  <li data-target="#gallery" data-slide-to="{{ forloop.counter0 }}"></li>
-                {% endif %}
-              {% endfor %}
-            </ol>
-            {% comment %} carousel {% endcomment %}
-            <div class="carousel-inner" style="background: rgb(10, 10, 10)">
-              {% for image in article.images.all  %}
-                {% if forloop.counter == 1 %}
-                  <div id="image-{{ forloop.counter0 }}" class="carousel-item active" style="height: 350px">
-                    <img class="image-fit" src="{{ image.image.url }}">
-                    {% if image.description %}
-                      <div class="carousel-caption">
-                        <p>{{ image.description }}</p>
-                      </div>
-                    {% endif %}                
-                  </div>
-                {% else %}
-                  <div id="image-{{ forloop.counter0 }}" class="carousel-item" style="height: 350px">
-                    <img class="image-fit" src="{{ image.image.url }}">
-                    {% if image.description %}
-                      <div class="carousel-caption">
-                        <p>{{ image.description }}</p>
-                      </div>
-                    {% endif %}
-                  </div>
-                {% endif %}
-              {% endfor %}
-            </div>
-            {% comment %} carousel left/right (< ; >) buttons {% endcomment %}
-            <a class="carousel-control-prev" href="#gallery" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#gallery" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div> <!-- carousel gallery end -->
-        </div> <!-- carousel container end -->
+        <div style="height: 350px">
+          <img class="image-fit" src="{{ article.images.first.image.url }}"> 
+        </div>
+      {% else %} {% comment %} Show image carousel {% endcomment %}
+        {% include "my_newsapp/snippets/image_carousel.html" %}
       {% endif %}
       <p class="padding-top-40" style="z-index: 1000">{{ article.text | linebreaks }}</p> 
       
