EditArticleView tests finished

--- a/my_newsapp/templates/my_newsapp/create_article.html
+++ b/my_newsapp/templates/my_newsapp/create_article.html
@@ -42,7 +42,7 @@
       {% crispy form %} 
       <!-- ArticleForm end -->
       
-      {% block current_files  %} <!-- used in edit view to list files and images that edited article has, and corresponding checkboxes -->
+      {% block current_files  %} <!-- used in edit_article.html (edit view) to list files and images that edited article has, and corresponding checkboxes -->
       {% endblock current_files %}
       
       <div class="image-formset"> <!-- ImageInlineFormSet start -->
