--- a/my_newsapp/templates/my_newsapp/home.html
+++ b/my_newsapp/templates/my_newsapp/home.html
@@ -29,65 +29,57 @@
 
 {% block content %}
   <div class="container home mt-60px mb-80px">
-      <div class="row" style="max-height: 750px; min-height: 750px;">
-        {% comment %} Left column - Primary category articles {% endcomment %}
-        <div class="col-md-7 border-right">
-            <h1 class="pb-3" style="font-weight: 700">
-              <a class="cat-title scroll-to-top" href="{{ primary_category.get_absolute_url }}">{{ primary_category.title }}</a>
-            </h1>
-            {% for article in primary_category.articles.all|slice:':3'  %}
-            <div class="container" style="max-height: 211px;">
-                  <div class="row padding-top-20 padding-bottom-20 padding-right-20">
+      <div class="row">
+        <div class="col border-right"> <!-- Left main column start - Primary category articles -->
+          <h1 class="pb-3" style="font-weight: 700">
+            <a class="cat-title scroll-to-top" href="{{ primary_category.get_absolute_url }}">{{ primary_category.title }}</a>
+          </h1>
+          {% for article in primary_category.articles.all|slice:':3' %}
+            <div class="row padding-top-20 padding-right-20 border-bottom-shorter">
 
-                        <div class="col-md-3 pl-0 pt-1">
-                          <img src="{% thumbnail article.images.first.image 150x150 crop %}">
-                        </div>
+              <div class="col-xl-3 col-lg-4 col-md-5 pt-2 pr-0">
+                <!-- image container -->
+                <div class="article-thumbnail-image" style="background-image: url('{{ article.images.first.image.url }}');"></div>
+              </div>
 
-                        <div class="col-md-9 article-preview" style="max-height: 160px;">
-                              <div class="row pl-3 title">
-                                <h3><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h3>
-                              </div>
-                              <div class="row pl-3 text-lightbrown pub-date">
-                                <p style="margin-bottom: 5px;">{{ article.pub_date.date }}</p>
-                              </div>
-                              <div class="row pl-3 short-description max-lines">
-                                <p style="color: rgb(63, 63, 63)">{{ article.short_description }}</p>
-                              </div>                                              
-                        </div> 
+              <div class="col-xl-9 col-lg-8 col-md-7 article-preview"> 
+                <div class="row pl-3 title">
+                  <h3><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h3>
+                </div>
+                <div class="row pl-3 text-lightbrown pub-date">
+                  <p style="margin-bottom: 5px;">{{ article.pub_date.date }}</p>
+                </div>
+                <div class="row pl-3 short-description">
+                  <p style="color: rgb(63, 63, 63)">{{ article.short_description }}</p>
+                </div>                                              
+              </div> 
 
-                  </div>
-                  <hr>
             </div>
-            {% endfor %}
-        </div> {% comment %} end of left column - primary category {% endcomment %}
-        {% comment %} right column {% endcomment %}
-        <div class="col-md-5 mt-1 pl-4 right-column" style="height: 746px;">
-        {% comment %} secondary category articles  {% endcomment %}  
-        <div class="row secondary-articles" style="height: 375px">  
-            <h2 class="pb-3 pl-3" style="font-weight: 500">
+          {% endfor %}
+        </div> <!-- Left main column end - Primary category articles -->
+        <div class="col-md-5 mt-1 pl-4 ml-4" style="height: 746px;"> <!-- Right main column start  -->
+          <div class="row secondary-articles" style="height: 375px">  <!-- Secondary articles start  -->
+            <h2 class="pb-3" style="font-weight: 500">
               <a class="cat-title scroll-to-top" href="{{ secondary_category.get_absolute_url }}">{{ secondary_category.title }}</a>
             </h2>
             {% for article in secondary_category.articles.all|slice:':2'  %}
-            <div class="container">
-                  <div class="row padding-right-20 pb-3">                    
-                        <div class="col-md-12 article-preview" style="max-height: 150px;">
-                              <div class="row pl-3 title">
-                                <h4><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h4>
-                              </div>
-                              <div class="row pl-3 text-lightbrown pub-date">
-                                <p style="margin-bottom: 5px;">{{ article.pub_date.date }}</p>
-                              </div>
-                              <div class="row pl-3 short-description max-lines" style="color: rgb(63, 63, 63); font-size: 14px;">
-                                <p>{{ article.short_description }}</p>
-                              </div>                                              
-                        </div>            
-                  </div>
+            <div class="row padding-right-20 pb-3">                    
+              <div class="col-md-12 article-preview" style="max-height: 150px;">
+                <div class="row pl-3 title">
+                  <h4><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h4>
+                </div>
+                <div class="row pl-3 text-lightbrown pub-date">
+                  <p style="margin-bottom: 5px;">{{ article.pub_date.date }}</p>
+                </div>
+                <div class="row pl-3 short-description max-lines" style="color: rgb(63, 63, 63); font-size: 14px;">
+                  <p>{{ article.short_description }}</p>
+                </div>                                              
+              </div>            
             </div>
             {% endfor %}
-        </div> {% comment %} end of secondary category articles  {% endcomment %}
+          </div> <!-- Secondary articles end -->
         <hr class="mt-0">
-          {% comment %} other articles  {% endcomment %}
-          <div class="row other-articles">
+          <div class="row other-articles"> <!-- other articles start  -->
               {% for article in other_articles|slice:':6' %}
                 {% if forloop.counter == 1   %}
                 {% comment %} openning left column div {% endcomment %}
